tests/analyze/parse-recover-stray-top-level/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Unexpected token (decimal digits (e.g. 47)). Expected a top-level definition (`def`, `enum`, `alias`, `trait`, `test`, or `implement`).
> 4 | 123
      ^^^

